--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -1,11 +1,25 @@
 FROM registry.jeebey.com/node:8.10.0-alpine
-
-RUN mkdir -p /app
-COPY .nuxt /app/.nuxt
-COPY static /app/static
-COPY nuxt.config.js /app
-COPY package.json /app
 WORKDIR /app
+COPY package.json /app
 RUN npm install
-EXPOSE 3002
-CMD [ "npm", "start" ]
+
+#FROM registry.jeebey.com/template-env-8:0.0.0
+#COPY .nuxt /app/.nuxt
+#COPY static /app/static
+#COPY nuxt.config.js /app
+#WORKDIR /app
+#EXPOSE 3002
+#CMD [ "npm", "start" ]
+
+#FROM registry.jeebey.com/node:12.10.0-alpine
+#WORKDIR /app
+#COPY package.json /app
+#RUN yarn install
+
+#FROM registry.jeebey.com/template-env-10:0.0.0
+#COPY .nuxt /app/.nuxt
+#COPY static /app/static
+#COPY nuxt.config.js /app
+#WORKDIR /app
+#EXPOSE 3002
+#CMD [ "yarn", "start" ]
