--- a/template/package.json
+++ b/template/package.json
@@ -50,6 +50,7 @@
     "less-loader": "^5.0.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.16.4",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "git-revision-webpack-plugin": "^3.0.4"
   }
 }
