--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -1,15 +1,15 @@
-FROM registry.jeebey.com/node:8.10.0-alpine
-WORKDIR /app
-COPY package.json /app
-RUN npm install
-
-#FROM registry.jeebey.com/template-env-8:0.0.0
-#COPY .nuxt /app/.nuxt
-#COPY static /app/static
-#COPY nuxt.config.js /app
+#FROM registry.jeebey.com/node:8.10.0-alpine
 #WORKDIR /app
-#EXPOSE 3002
-#CMD [ "npm", "start" ]
+#COPY package.json /app
+#RUN npm install
+
+FROM registry.jeebey.com/template-env-8:0.0.0
+COPY .nuxt /app/.nuxt
+COPY static /app/static
+COPY nuxt.config.js /app
+WORKDIR /app
+EXPOSE 3002
+CMD [ "npm", "start" ]
 
 #FROM registry.jeebey.com/node:12.10.0-alpine
 #WORKDIR /app
