--- a/template/package.json
+++ b/template/package.json
@@ -28,8 +28,10 @@
     "ant-design-vue": "^1.1.10",
     "cookie-universal-nuxt": "^2.0.11",
     "cross-env": "^5.2.0",
+    "lru-cache": "^5.1.1",
     "node-emoji": "^1.10.0",
     "nuxt": "^2.0.0",
+    "nuxt-page-cache": "0.0.5",
     "vue-events": "^3.1.0",
     "vue-i18n": "^8.13.0",
     "vue-native-websocket": "^2.0.13",
